<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".LihatBiodata">
    
    <LinearLayout
        android:id="@+id/barisNomor"
        android:layout_marginVertical="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:text="@string/label_nomor"/>
        <TextView
            android:id="@+id/txtNomor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/label_nomor"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/barisNama"
        android:layout_marginVertical="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="vertical"
        android:layout_below="@id/barisNomor">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:text="@string/label_nama"/>
        <TextView
            android:id="@+id/txtNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/label_nama"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/barisTgl"
        android:layout_marginVertical="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="vertical"
        android:layout_below="@id/barisNama">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:text="@string/label_tgl"/>
        <TextView
            android:id="@+id/txtTgl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/label_tgl"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/barisJk"
        android:layout_marginVertical="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="vertical"
        android:layout_below="@id/barisTgl">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:text="@string/label_jk"/>
        <TextView
            android:id="@+id/txtJk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/label_jk"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/barisAlamat"
        android:layout_marginVertical="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="vertical"
        android:layout_below="@id/barisJk">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:text="@string/label_alamat"/>
        <TextView
            android:id="@+id/txtAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/label_alamat"/>
    </LinearLayout>

</RelativeLayout>